# lightwire

./: Cargo.toml  README.md  lifx-rs.md
doc/: PLAN-lightwire.glm.md  PLAN-lightwire.kimi.md  PLAN-lightwire.md  PLAN-lightwire.opus.md
doc/discovery/: guide-wireplumber.md  null-sinks.md  pipewire-native.rs.md
src/: config.rs  lib.rs
src/curves/: gamma.rs  linear.rs  logarithmic.rs  mod.rs  perceptual.rs
src/pipewire/: dropin.rs  mod.rs  monitor.rs  volume.rs
src/provider/: error.rs  lifx.rs  mod.rs  registry.rs  types.rs
